Secondary Window - See files/folder that will be backed up

--- a/app/css/style.css
+++ b/app/css/style.css
@@ -124,6 +124,16 @@ body {
   background: rgba(0, 0, 0, 0.7) !important;
 }
 
+.table {
+  background-color: transparent;
+  color: #abd1c6;
+}
+
+.table thead td,
+.table thead th {
+  color: #fffffe;
+}
+
 /* Custom */
 
 .drync {
