Secondary Windows Improvements & Sync functionality w/ logging

--- a/app/css/style.css
+++ b/app/css/style.css
@@ -181,9 +181,9 @@ body {
   background-color: #003634;
 }
 
-#total-size {
+/* #total-size {
   font-family: "Poppins Bold", sans-serif;
-}
+} */
 
 #form-buttons {
   margin-top: 30px;
